[package]
name = "salvo-websocket"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures-util = { version = "0.3.24", default-features = false }
once_cell = "1.14.0"
salvo = { version = "0.34.2", features = ["extra", "anyhow"] }
tokio = { version = "1.21.0", features = ["macros"] }
tokio-stream = { version = "0.1.9", features = ["net"] }
tracing = "0.1.36"
tracing-subscriber = "0.3.15"
async-trait = "0.1.57"
dashmap = "5.4.0"
anyhow = "1.0.64"

#salvo = { git = "https://gitee.com/hubert22/salvo.git", features = ["extra"] }
