[package]
authors = ["Hubert Shelley <hubertshelley@163.com>"]
description = "Websocket tool for salvo"
edition = "2021"
homepage = "https://gitee.com/hubert22/salvo-websocket"
license = "Apache-2.0"
name = "salvo-websocket"
readme = "README.md"
version = "0.0.4"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.66"
async-trait = "0.1.58"
dashmap = "5.4.0"
futures-util = { version = "0.3.25", default-features = false }
once_cell = "1.15.0"
salvo = { version = "0.37.3", features = ["ws", "anyhow"] }
tokio = { version = "1.21.2", features = ["macros"] }
tokio-stream = { version = "0.1.11", features = ["net"] }
tracing = "0.1.37"
tracing-subscriber = "0.3.16"
