[package]
name = "example-ws-chat"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures-util = { version = "0.3.24", default-features = false }
once_cell = "1.14.0"
salvo = { version = "0.34.0", features = ["extra"] }
tokio = { version = "1.21.0", features = ["macros"] }
tokio-stream = { version = "0.1.9", features = ["net"] }
tracing = "0.1.36"
tracing-subscriber = "0.3.15"
