[package]
name = "example-ws-chat"
version = "0.1.0"
edition = "2021"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures-util = { version = "0.3.24", default-features = false }
once_cell = "1.14.0"
tokio = { version = "1.21.1", features = ["macros"] }
salvo = { version = "0.34.2", features = ["extra"] }
serde = { version = "1.0.144", features = ["derive"] }
tokio-stream = { version = "0.1.9", features = ["net"] }
tracing = "0.1.36"
tracing-subscriber = "0.3.15"

salvo-websocket = { path = "../../salvo-websocket" }
