[package]
name = "example-ws-chat"
version = "0.1.0"
edition = "2021"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures-util = { version = "0.3.25", default-features = false }
once_cell = "1.15.0"
tokio = { version = "1.21.2", features = ["macros"] }
salvo = { version = "0.37.3", features = ["ws"] }
serde = { version = "1.0.147", features = ["derive"] }
tokio-stream = { version = "0.1.11", features = ["net"] }
tracing = "0.1.37"
tracing-subscriber = "0.3.16"

salvo-websocket = { path = "../../salvo-websocket" }
