[package]
name = "example-ws"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures-util = { version = "0.3.24", default-features = false }
salvo = { version = "0.34.2", features = ["extra"] }
tokio = { version = "1.21.1", features = ["macros"] }
tracing = "0.1.36"
tracing-subscriber = "0.3.15"
